--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -111,10 +111,9 @@ h1, h2, h3, h4, h5, h6 { color: $dkteal; }
 	margin: 0 auto;
 }
 
-.tile {
-	width: 31%;
+.tile-double {
+	width: 65.5%;
 	margin: 0 3.5% 3.5% 0;
-	min-height: 150px;
 	float: left;
 
 	hr {
@@ -124,8 +123,35 @@ h1, h2, h3, h4, h5, h6 { color: $dkteal; }
 	}
 }
 
-.tile:nth-child(3n+3) {margin-right: 0;}
+.tile {
+	width: 31%;
+	margin: 0 3.5% 3.5% 0;
+	float: left;
+
+	hr {
+		height: 2px;
+		background-color: $dkteal;
+		border: 0 none;
+	}
+}
+
+.rightest { margin-right: 0; }
+// .tile:nth-child(3n+3) {margin-right: 0;}
 
 //////////////////////////////////////////////////////////////////////////
 // FOOTER STYLING ////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////
+.bottom-container {
+	padding-top: 20px;
+	width: 80%;
+	margin: 0 auto;
+
+	text-align: center;
+}
+
+.sec-img {
+	max-width: 100%;
+	overflow: hidden;
+}
+
+.footer { margin-top: 20px; }
